fix : reduce nullability of code and remove unnecessary tests